# ObjectCount

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
docs/adr/: 0001-lossless-store-and-forward.md  0002-wired-first-connectivity.md
docs/superpowers/plans/: 2026-07-12-detection-core.md
docs/superpowers/specs/: 2026-07-12-phone-camera-object-counting-design.md
src/objectcount/: viz.py
src/objectcount/cli/: detect.py  evaluate.py
src/objectcount/detection/: detector.py  postprocess.py  preprocess.py  roi.py  types.py
src/objectcount/frames/: sources.py
src/objectcount/models/: package.py
tests/: conftest.py  test_cli_detect.py  test_cli_evaluate.py  test_detector.py  test_package.py  test_postprocess.py  test_preprocess.py  test_roi.py  test_smoke.py  test_sources.py  test_types.py
tools/: export_pretrained.py
